[gd_scene load_steps=7 format=2]

[ext_resource path="res://Pause_Menu.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/ALBA____.TTF"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://fonts/ALBA____.TTF"

[sub_resource type="DynamicFont" id=5]
size = 128
font_data = SubResource( 4 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
script = ExtResource( 1 )

[node name="Menu_Buttons" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 448.0
margin_top = -336.0
margin_right = 856.0
margin_bottom = -7.0

[node name="MainMenu_Button" type="Button" parent="Menu_Buttons"]
margin_right = 408.0
margin_bottom = 107.0
text = "Main Menu"
flat = true

[node name="Levels_Button" type="Button" parent="Menu_Buttons"]
margin_top = 111.0
margin_right = 408.0
margin_bottom = 218.0
text = "Level select"
flat = true

[node name="Quit_Button" type="Button" parent="Menu_Buttons"]
margin_top = 222.0
margin_right = 408.0
margin_bottom = 329.0
text = "Quit"
flat = true

[node name="Label" type="Label" parent="."]
margin_left = 256.0
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 5 )
text = "Paused"
align = 1
valign = 1

[connection signal="pressed" from="Menu_Buttons/MainMenu_Button" to="." method="_on_MainMenu_Button_pressed"]
[connection signal="pressed" from="Menu_Buttons/Levels_Button" to="." method="_on_Levels_Button_pressed"]
[connection signal="pressed" from="Menu_Buttons/Quit_Button" to="." method="_on_Quit_Button_pressed"]
